# libFoo

./: CMakeLists.txt  Makefile  Makefile.am  README.md  bar.c  bar.cpp  build.sh  configure.ac  foo.c  foo.cpp  foo.h  libFoo.map  libFoo.spec  meson.build
